Add kritin to IAs author list

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -13,7 +13,8 @@ barry:
 
     Instructional Assistants
     : Alena Martsul (Email: <amartsul@ucsd.edu>)
-    : Ivy Fernandes (Email: <ihfernan@ucsd.edu>)  
+    : Ivy Fernandes (Email: <ihfernan@ucsd.edu>)
+    : Kritin Karkare (Email: <kkarkare@ucsd.edu>)    
 
     Course Syllabus
     : [Fall 2020 (PDF)](https://bioboot.github.io/bimm143_F20/class-material/BIMM143_F20_syllabus.pdf){:.no-push-state}
